kuber/config-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-test

spec:
  containers:
    - name: config-test
      image: nginx:alpine
