kuber/liveness-test.yaml
apiVersion: v1
kind: Pod

metadata:
  name: liveness-test

spec:
  containers:
    - name: nginx
      image: nginx:alpine

      livenessProbe:
        httpGet:
          path: /
          port: 80

        initialDelaySeconds: 5
        periodSeconds: 5
        failureThreshold: 3
