kuber/probe-test.yaml
apiVersion: v1
kind: Pod

metadata:
  name: probe-test

spec:
  containers:
    - name: nginx
      image: nginx:alpine

      readinessProbe:
        httpGet:
          path: /
          port: 80

        initialDelaySeconds: 5
        periodSeconds: 5
