kuber/rbac-test.yaml
apiVersion: v1
kind: Pod

metadata:
  name: rbac-test

spec:
  serviceAccountName: app-sa

  containers:
    - name: test
      image: bitnami/kubectl:latest
      command: ["sleep", "3600"]
