kuber/resources-test.yaml
apiVersion: v1
kind: Pod

metadata:
  name: resources-test

spec:
  containers:
    - name: nginx
      image: nginx:alpine

      resources:
        requests:
          cpu: "100m"
          memory: "64Mi"

        limits:
          cpu: "200m"
          memory: "128Mi"
